--- a/JenkinsFile
+++ b/JenkinsFile
@@ -18,8 +18,8 @@ node{
                     for (int k = 0; k < files.size(); k++) {
                         def file = files[k]
                         
-                        // def pathFile = "${env.WORKSPACE}/${file.path}"
-                        // echo pathFile
+                        def pathFile = "${env.WORKSPACE}/${file.path}"
+                        echo pathFile
                         
                         // def content = readFile(pathFile)
                         
