--- a/JenkinsFile
+++ b/JenkinsFile
@@ -27,6 +27,9 @@ node{
                         
                         echo "${fileContents}"
 
+                        assert r ==~ /debugger/, "File content debugger string"
+
+
                     }
                 }
             }
