--- a/JenkinsFile
+++ b/JenkinsFile
@@ -48,7 +48,7 @@ node{
     }
 
     stage("Email Notification"){
-            mail bcc: '', body: mailContent, cc: '', from: '', replyTo: '', subject: 'Build source', to: 'conghieu135@gmail.com'
+            mail bcc: '', body: "${mailContent}", cc: '', from: '', replyTo: '', subject: 'Build source', to: 'conghieu135@gmail.com'
 
     
 }
